--- a/apps/outlook-addin/src/taskpane/taskpane.html
+++ b/apps/outlook-addin/src/taskpane/taskpane.html
@@ -16,6 +16,7 @@
       .taskpane-container {
         padding: 16px;
         max-width: 100%;
+        min-height: 100vh;
       }
 
       .taskpane-header {
@@ -23,6 +24,15 @@
         margin-bottom: 20px;
         padding-bottom: 16px;
         border-bottom: 1px solid #e1e1e1;
+        position: relative;
+      }
+
+      .taskpane-header.success {
+        background: linear-gradient(135deg, #4caf50, #45a049);
+        color: white;
+        border-radius: 8px;
+        padding: 20px;
+        border-bottom: none;
       }
 
       .taskpane-header h1 {
@@ -31,10 +41,36 @@
         font-size: 24px;
       }
 
+      .taskpane-header.success h1 {
+        color: white;
+      }
+
       .taskpane-header p {
         margin: 4px 0 0 0;
         color: #666;
         font-size: 14px;
+      }
+
+      .taskpane-header.success p {
+        color: rgba(255, 255, 255, 0.9);
+      }
+
+      .success-icon {
+        font-size: 48px;
+        margin-bottom: 10px;
+        color: white;
+      }
+
+      .auth-status {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        background-color: #4caf50;
+        color: white;
+        padding: 4px 8px;
+        border-radius: 12px;
+        font-size: 12px;
+        font-weight: 600;
       }
 
       .taskpane-content {
@@ -52,6 +88,45 @@
         font-size: 14px;
       }
 
+      /* Authentication Section */
+      .auth-section {
+        text-align: center;
+        padding: 40px 20px;
+        background-color: white;
+        border-radius: 8px;
+        border: 1px solid #e1e1e1;
+      }
+
+      .auth-icon {
+        font-size: 48px;
+        margin-bottom: 16px;
+      }
+
+      .auth-section h3 {
+        margin: 0 0 12px 0;
+        color: #333;
+        font-size: 18px;
+      }
+
+      .auth-section p {
+        margin: 0 0 24px 0;
+        color: #666;
+        font-size: 14px;
+        line-height: 1.5;
+      }
+
+      .auth-button {
+        min-width: 200px;
+        margin-bottom: 16px;
+      }
+
+      .privacy-note {
+        color: #888;
+        font-size: 12px;
+        line-height: 1.4;
+      }
+
+      /* Recipients Section */
       .recipients-section h3,
       .results-section h3 {
         margin: 0 0 8px 0;
@@ -81,6 +156,68 @@
         margin: 0;
       }
 
+      /* Configuration Section */
+      .config-section {
+        background-color: white;
+        border: 1px solid #e1e1e1;
+        border-radius: 8px;
+        overflow: hidden;
+      }
+
+      .config-toggle {
+        width: 100%;
+        padding: 12px 16px;
+        background-color: #f8f9fa;
+        border: none;
+        text-align: left;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 600;
+        color: #333;
+        transition: background-color 0.2s;
+      }
+
+      .config-toggle:hover {
+        background-color: #e9ecef;
+      }
+
+      .config-panel {
+        padding: 16px;
+        border-top: 1px solid #e1e1e1;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+
+      .config-row {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+
+      .config-row label {
+        font-size: 14px;
+        font-weight: 600;
+        color: #333;
+      }
+
+      .config-row input,
+      .config-row select {
+        padding: 8px 12px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        font-size: 14px;
+        background-color: white;
+      }
+
+      .config-row input:focus,
+      .config-row select:focus {
+        outline: none;
+        border-color: #0078d4;
+        box-shadow: 0 0 0 2px rgba(0, 120, 212, 0.2);
+      }
+
+      /* Actions Section */
       .actions-section {
         display: flex;
         flex-direction: column;
@@ -122,6 +259,21 @@
         background-color: #e6e6e6;
       }
 
+      /* Results Section */
+      .results-section {
+        background-color: white;
+        border: 1px solid #e1e1e1;
+        border-radius: 8px;
+        padding: 16px;
+      }
+
+      .results-subtitle {
+        margin: 0 0 16px 0;
+        color: #666;
+        font-size: 14px;
+        font-style: italic;
+      }
+
       .meeting-times {
         display: flex;
         flex-direction: column;
@@ -129,79 +281,168 @@
       }
 
       .meeting-time-card {
-        background-color: white;
-        border: 1px solid #e1e1e1;
-        border-radius: 4px;
-        padding: 12px;
+        background-color: #f8f9fa;
+        border: 2px solid #e1e1e1;
+        border-radius: 8px;
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        transition: all 0.2s;
+        position: relative;
+      }
+
+      .meeting-time-card.clickable {
+        cursor: pointer;
+      }
+
+      .meeting-time-card.clickable:hover {
+        border-color: #0078d4;
+        background-color: #f0f8ff;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 120, 212, 0.15);
+      }
+
+      .meeting-time-card.confidence-high {
+        border-left: 4px solid #4caf50;
+      }
+
+      .meeting-time-card.confidence-medium {
+        border-left: 4px solid #ff9800;
+      }
+
+      .meeting-time-card.confidence-low {
+        border-left: 4px solid #f44336;
+      }
+
+      .time-info {
         display: flex;
         justify-content: space-between;
         align-items: center;
       }
 
-      .time-info {
+      .day-info {
         display: flex;
         flex-direction: column;
       }
 
-      .time-info strong {
+      .day-info strong {
         color: #333;
+        font-size: 16px;
+        margin-bottom: 2px;
+      }
+
+      .day-info span {
+        color: #666;
         font-size: 14px;
       }
 
-      .time-info span {
-        color: #666;
-        font-size: 12px;
+      .time-range {
+        color: #0078d4;
+        font-size: 16px;
+        font-weight: 600;
       }
 
-      .confidence {
+      .confidence-badge {
+        background-color: #e3f2fd;
+        color: #1976d2;
         padding: 4px 8px;
         border-radius: 12px;
         font-size: 12px;
         font-weight: 600;
+        align-self: flex-start;
       }
 
-      .confidence-high {
-        background-color: #d4edda;
-        color: #155724;
+      .create-button {
+        background-color: #0078d4;
+        color: white;
+        padding: 8px 16px;
+        border-radius: 4px;
+        font-size: 14px;
+        font-weight: 600;
+        text-align: center;
+        transition: background-color 0.2s;
       }
 
-      .confidence-medium {
-        background-color: #fff3cd;
-        color: #856404;
+      .meeting-time-card.clickable:hover .create-button {
+        background-color: #106ebe;
       }
 
-      .confidence-low {
-        background-color: #f8d7da;
-        color: #721c24;
-      }
-
-      .portal-link {
+      /* Meeting Summary */
+      .meeting-summary {
         background-color: white;
         border: 1px solid #e1e1e1;
-        border-radius: 4px;
-        padding: 12px;
-        margin: 16px 0;
+        border-radius: 8px;
+        padding: 20px;
+        text-align: center;
       }
 
-      .portal-link p {
-        margin: 0 0 8px 0;
+      .meeting-summary h3 {
+        margin: 0 0 16px 0;
+        color: #333;
+        font-size: 20px;
+      }
+
+      .meeting-details {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        text-align: left;
+      }
+
+      .meeting-details p {
+        margin: 0;
         font-size: 14px;
         color: #333;
       }
 
-      .portal-url {
-        display: block;
-        background-color: #f5f5f5;
-        padding: 8px;
+      .teams-link {
+        background-color: #f0f8ff;
+        border: 1px solid #0078d4;
         border-radius: 4px;
-        font-family: monospace;
-        font-size: 12px;
+        padding: 12px;
+        margin-top: 8px;
+      }
+
+      .teams-link p {
+        margin: 0 0 8px 0;
+        font-weight: 600;
+      }
+
+      .teams-link a {
         color: #0078d4;
-        word-break: break-all;
+        text-decoration: none;
+        font-weight: 600;
+      }
+
+      .teams-link a:hover {
+        text-decoration: underline;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 320px) {
+        .taskpane-container {
+          padding: 12px;
+        }
+
+        .taskpane-header h1 {
+          font-size: 20px;
+        }
+
+        .meeting-time-card {
+          padding: 12px;
+        }
+
+        .time-info {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 8px;
+        }
       }
     </style>
   </head>
   <body>
     <div id="root"></div>
+    <script src="./taskpane.js"></script>
   </body>
 </html>
