Add complete OAuth integration for Outlook add-in
- Implement Microsoft OAuth flow with proper environment variable handling
- Add backend API with calendar authentication endpoints
- Create Outlook add-in with Office.js dialog integration
- Add proper error handling and debugging
- Externalize all OAuth secrets to environment variables
- Add comprehensive testing and development documentation

--- a/apps/outlook-addin/src/commands/commands.html
+++ b/apps/outlook-addin/src/commands/commands.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SmartMeet Commands</title>
+
+    <!-- Office JavaScript API -->
+    <script
+      type="text/javascript"
+      src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"
+    ></script>
   </head>
   <body>
     <!-- Commands.html is used for function commands in the ribbon -->
+    <script type="text/javascript" src="commands.js"></script>
   </body>
 </html>
