--- a/apps/outlook-addin/src/taskpane/taskpane.html
+++ b/apps/outlook-addin/src/taskpane/taskpane.html
@@ -1,448 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartMeet</title>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Add security headers for add-in environment -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+      default-src 'self' 'unsafe-inline' 'unsafe-eval' https: wss: ws:;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https: data:;
+      style-src 'self' 'unsafe-inline' https:;
+      img-src 'self' data: https:;
+      connect-src 'self' https: wss: ws: http:;
+      font-src 'self' https: data:;
+      frame-src 'self' https:;
+    "
+    />
+
+    <title>SmartMeet - Meeting Scheduler</title>
+
+    <!-- Office JavaScript API -->
+    <script
+      type="text/javascript"
+      src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"
+    ></script>
+
+    <!-- Enhanced error handling -->
+    <script>
+      console.log("🏁 [ADDIN-DEBUG] HTML loaded, setting up error handlers");
+
+      // Handle script errors before React loads
+      window.addEventListener("error", function (event) {
+        if (event.message === "Script error." && event.filename === "") {
+          console.warn(
+            "🌐 [HTML] Cross-origin script error (expected in add-in environment)"
+          );
+          return false; // Prevent default error handling
+        }
+        console.error("🚨 [HTML] Script error:", event.error || event.message);
+      });
+
+      // Handle promise rejections
+      window.addEventListener("unhandledrejection", function (event) {
+        console.warn("🚨 [HTML] Unhandled promise rejection:", event.reason);
+      });
+
+      // Office.js ready check
+      if (typeof Office !== "undefined") {
+        Office.onReady(function (info) {
+          console.log("✅ [ADDIN-DEBUG] Office.js ready:", info);
+        });
+      } else {
+        console.warn("⚠️ [ADDIN-DEBUG] Office.js not available yet");
+      }
+    </script>
+
     <style>
+      /* Basic styling for better UX */
       body {
-        margin: 0;
-        padding: 0;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f5f5f5;
-      }
-
-      .taskpane-container {
-        padding: 16px;
-        max-width: 100%;
-        min-height: 100vh;
-      }
-
-      .taskpane-header {
-        text-align: center;
-        margin-bottom: 20px;
-        padding-bottom: 16px;
-        border-bottom: 1px solid #e1e1e1;
-        position: relative;
-      }
-
-      .taskpane-header.success {
-        background: linear-gradient(135deg, #4caf50, #45a049);
-        color: white;
-        border-radius: 8px;
+        margin: 0;
         padding: 20px;
-        border-bottom: none;
+        background-color: #f3f2f1;
+        color: #323130;
       }
 
-      .taskpane-header h1 {
-        margin: 0;
-        color: #0078d4;
-        font-size: 24px;
-      }
-
-      .taskpane-header.success h1 {
-        color: white;
-      }
-
-      .taskpane-header p {
-        margin: 4px 0 0 0;
-        color: #666;
-        font-size: 14px;
-      }
-
-      .taskpane-header.success p {
-        color: rgba(255, 255, 255, 0.9);
-      }
-
-      .success-icon {
-        font-size: 48px;
-        margin-bottom: 10px;
-        color: white;
-      }
-
-      .auth-status {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        background-color: #4caf50;
-        color: white;
-        padding: 4px 8px;
-        border-radius: 12px;
-        font-size: 12px;
-        font-weight: 600;
-      }
-
-      .taskpane-content {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-      }
-
-      .error-message {
-        background-color: #fed7d7;
-        border: 1px solid #feb2b2;
+      #root {
+        min-height: 200px;
+        background: white;
         border-radius: 4px;
-        padding: 12px;
-        color: #c53030;
-        font-size: 14px;
+        padding: 20px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       }
 
-      /* Authentication Section */
-      .auth-section {
-        text-align: center;
-        padding: 40px 20px;
-        background-color: white;
-        border-radius: 8px;
-        border: 1px solid #e1e1e1;
-      }
-
-      .auth-icon {
-        font-size: 48px;
-        margin-bottom: 16px;
-      }
-
-      .auth-section h3 {
-        margin: 0 0 12px 0;
-        color: #333;
-        font-size: 18px;
-      }
-
-      .auth-section p {
-        margin: 0 0 24px 0;
-        color: #666;
-        font-size: 14px;
-        line-height: 1.5;
-      }
-
-      .auth-button {
-        min-width: 200px;
-        margin-bottom: 16px;
-      }
-
-      .privacy-note {
-        color: #888;
-        font-size: 12px;
-        line-height: 1.4;
-      }
-
-      /* Recipients Section */
-      .recipients-section h3,
-      .results-section h3 {
-        margin: 0 0 8px 0;
-        color: #333;
-        font-size: 16px;
-      }
-
-      .recipients-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      .recipient-item {
-        background-color: #e3f2fd;
-        border-radius: 4px;
-        padding: 8px 12px;
-        margin-bottom: 4px;
-        font-size: 14px;
-        color: #1976d2;
-      }
-
-      .no-recipients {
-        color: #666;
-        font-style: italic;
-        font-size: 14px;
-        margin: 0;
-      }
-
-      /* Configuration Section */
-      .config-section {
-        background-color: white;
-        border: 1px solid #e1e1e1;
-        border-radius: 8px;
-        overflow: hidden;
-      }
-
-      .config-toggle {
-        width: 100%;
-        padding: 12px 16px;
-        background-color: #f8f9fa;
-        border: none;
-        text-align: left;
-        cursor: pointer;
-        font-size: 14px;
-        font-weight: 600;
-        color: #333;
-        transition: background-color 0.2s;
-      }
-
-      .config-toggle:hover {
-        background-color: #e9ecef;
-      }
-
-      .config-panel {
-        padding: 16px;
-        border-top: 1px solid #e1e1e1;
+      /* Loading indicator */
+      .loading {
         display: flex;
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .config-row {
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-      }
-
-      .config-row label {
-        font-size: 14px;
-        font-weight: 600;
-        color: #333;
-      }
-
-      .config-row input,
-      .config-row select {
-        padding: 8px 12px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 14px;
-        background-color: white;
-      }
-
-      .config-row input:focus,
-      .config-row select:focus {
-        outline: none;
-        border-color: #0078d4;
-        box-shadow: 0 0 0 2px rgba(0, 120, 212, 0.2);
-      }
-
-      /* Actions Section */
-      .actions-section {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-      }
-
-      .primary-button,
-      .secondary-button {
-        padding: 12px 16px;
-        border: none;
-        border-radius: 4px;
-        font-size: 14px;
-        font-weight: 600;
-        cursor: pointer;
-        transition: all 0.2s;
-      }
-
-      .primary-button {
-        background-color: #0078d4;
-        color: white;
-      }
-
-      .primary-button:hover:not(:disabled) {
-        background-color: #106ebe;
-      }
-
-      .primary-button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
-      }
-
-      .secondary-button {
-        background-color: #f3f3f3;
-        color: #333;
-        border: 1px solid #ddd;
-      }
-
-      .secondary-button:hover:not(:disabled) {
-        background-color: #e6e6e6;
-      }
-
-      /* Results Section */
-      .results-section {
-        background-color: white;
-        border: 1px solid #e1e1e1;
-        border-radius: 8px;
-        padding: 16px;
-      }
-
-      .results-subtitle {
-        margin: 0 0 16px 0;
-        color: #666;
-        font-size: 14px;
-        font-style: italic;
-      }
-
-      .meeting-times {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-      }
-
-      .meeting-time-card {
-        background-color: #f8f9fa;
-        border: 2px solid #e1e1e1;
-        border-radius: 8px;
-        padding: 16px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        transition: all 0.2s;
-        position: relative;
-      }
-
-      .meeting-time-card.clickable {
-        cursor: pointer;
-      }
-
-      .meeting-time-card.clickable:hover {
-        border-color: #0078d4;
-        background-color: #f0f8ff;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 120, 212, 0.15);
-      }
-
-      .meeting-time-card.confidence-high {
-        border-left: 4px solid #4caf50;
-      }
-
-      .meeting-time-card.confidence-medium {
-        border-left: 4px solid #ff9800;
-      }
-
-      .meeting-time-card.confidence-low {
-        border-left: 4px solid #f44336;
-      }
-
-      .time-info {
-        display: flex;
-        justify-content: space-between;
         align-items: center;
+        justify-content: center;
+        min-height: 100px;
+        color: #605e5c;
       }
 
-      .day-info {
-        display: flex;
-        flex-direction: column;
+      .loading::after {
+        content: "Loading...";
+        animation: loading 1.5s infinite;
       }
 
-      .day-info strong {
-        color: #333;
-        font-size: 16px;
-        margin-bottom: 2px;
-      }
-
-      .day-info span {
-        color: #666;
-        font-size: 14px;
-      }
-
-      .time-range {
-        color: #0078d4;
-        font-size: 16px;
-        font-weight: 600;
-      }
-
-      .confidence-badge {
-        background-color: #e3f2fd;
-        color: #1976d2;
-        padding: 4px 8px;
-        border-radius: 12px;
-        font-size: 12px;
-        font-weight: 600;
-        align-self: flex-start;
-      }
-
-      .create-button {
-        background-color: #0078d4;
-        color: white;
-        padding: 8px 16px;
-        border-radius: 4px;
-        font-size: 14px;
-        font-weight: 600;
-        text-align: center;
-        transition: background-color 0.2s;
-      }
-
-      .meeting-time-card.clickable:hover .create-button {
-        background-color: #106ebe;
-      }
-
-      /* Meeting Summary */
-      .meeting-summary {
-        background-color: white;
-        border: 1px solid #e1e1e1;
-        border-radius: 8px;
-        padding: 20px;
-        text-align: center;
-      }
-
-      .meeting-summary h3 {
-        margin: 0 0 16px 0;
-        color: #333;
-        font-size: 20px;
-      }
-
-      .meeting-details {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        text-align: left;
-      }
-
-      .meeting-details p {
-        margin: 0;
-        font-size: 14px;
-        color: #333;
-      }
-
-      .teams-link {
-        background-color: #f0f8ff;
-        border: 1px solid #0078d4;
-        border-radius: 4px;
-        padding: 12px;
-        margin-top: 8px;
-      }
-
-      .teams-link p {
-        margin: 0 0 8px 0;
-        font-weight: 600;
-      }
-
-      .teams-link a {
-        color: #0078d4;
-        text-decoration: none;
-        font-weight: 600;
-      }
-
-      .teams-link a:hover {
-        text-decoration: underline;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 320px) {
-        .taskpane-container {
-          padding: 12px;
+      @keyframes loading {
+        0%,
+        100% {
+          opacity: 0.5;
         }
-
-        .taskpane-header h1 {
-          font-size: 20px;
-        }
-
-        .meeting-time-card {
-          padding: 12px;
-        }
-
-        .time-info {
-          flex-direction: column;
-          align-items: flex-start;
-          gap: 8px;
+        50% {
+          opacity: 1;
         }
       }
     </style>
   </head>
+
   <body>
-    <div id="root"></div>
-    <script src="./taskpane.js"></script>
+    <div id="root">
+      <div class="loading"></div>
+    </div>
+
+    <!-- React app will be loaded here -->
+    <script type="text/javascript" src="taskpane.js"></script>
+
+    <script>
+      console.log(
+        "🎯 [ADDIN-DEBUG] All scripts loaded, React should initialize"
+      );
+    </script>
+
+    <div id="content-main" class="ms-welcome__main">
+      <!-- Simple fallback test - this should show even if React fails -->
+      <div style="background: red; color: white; padding: 10px; margin: 10px">
+        ✅ HTML LOADED - If you see this, the basic HTML is working
+      </div>
+
+      <div class="ms-welcome__header">
+        <!-- ... existing code ... -->
+      </div>
+    </div>
   </body>
 </html>
